--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,46 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 /* ------------- Colours -------------- */
 
-
 .bg-color-name-title {
-    background-color: #676767;
+  background-color: #676767;
+}
 
+.ui-menu-color-home {
+  background-color: #e67e22 !important;
+}
+
+.ui-menu-color-resume {
+  background-color: #9b59b6;
+}
+
+.ui-menu-color-contact {
+  background-color: #3498db;
+}
+
+.ui-menu-color-download {
+  background-color: #525252;
 }
 
 /* ------------- Heading -------------- */
 
 header {
-    margin: 0;
-
+  margin: 0;
 }
 
 .heading {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .logo {
-    background: url("../images/rosie.jpg") no-repeat center;
-    background-size: cover; 
-    min-height: 360px;
-    transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
+  background: url("../images/rosie.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 360px;
+  transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
 }
 
 .name {
-    font-family: "Exo", sans-serif;
-    font-weight: 100;
-    font-size: 46px;
-    margin-top: 50px;
-    color: #fff;
+  font-family: "Exo", sans-serif;
+  font-weight: 100;
+  font-size: 46px;
+  margin-top: 50px;
+  color: #fff;
 }
 
 .title {
-    font-family: "Roboto", sans-serif;
-    font-weight: 200;
-    font-size: 28px;
-    margin: 20px 0 90px 0;
-    color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 200;
+  font-size: 28px;
+  margin: 20px 0 90px 0;
+  color: #fff;
 }
