--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@
   background-color: #fff;
 }
 
+.bg-color-personal-info {
+  background-color: #f4f4f4;
+}
+
 /* ------------- Special paddings margins and text -------------- */
 
 h1,
@@ -54,15 +58,19 @@ h4 {
 }
 
 .section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
+  display: table-cell;
+  padding: 0 30px 30px;
+  float: none;
 }
 
 .section-heading {
-    font-family: "Exo" , sans-serif;
-    font-weight: 300;
-    margin: 25px 0 40px 0;
+  font-family: "Exo", sans-serif;
+  font-weight: 300;
+  margin: 25px 0 40px 0;
+}
+
+.bg-color-three-reasons .col-2 {
+    padding-left: 20px;
 }
 
 /* ------------- Heading -------------- */
@@ -205,4 +213,59 @@ footer {
 
 #footer-details {
   padding: 20px;
+}
+
+/* ------------- Three Reasons -------------- */
+
+.three-reasons-icon {
+  font-size: 26px;
+  color: #e67e22;
+}
+
+.three-reasons-heading {
+  margin-bottom: 15px;
+}
+
+
+/* ------------- Personal info -------------- */
+
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+    
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+
+    padding-right: 8px;
+    display: inline-block;
+
+
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+    
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    width: 60%;
+    position: relative;
+    
+
 }
